# SimpleCPP

./: CMakeLists.txt  README.md
buildScript/: CMakeLists.txt  main.cpp
modules/SimpleArchive/: CMakeLists.txt
modules/SimpleArchive/include/sarch/: Archive.h  FileArchive.h  HashArchive.h  PathArchive.h
modules/SimpleArchive/test/: ArchTest.cpp  CMakeLists.txt
modules/SimpleDG/include/sdg/: DependencyGraph.h
modules/SimpleDG/test/: CMakeLists.txt  Test.cpp
modules/SimplePtr/: CMakeLists.txt
modules/SimplePtr/include/sptr/: Common.h  Frail.h  Memory.h  Shared.h  SharedFrom.h  Unique.h  Weak.h
modules/SimpleSTL/: CMakeLists.txt  README.md
modules/SimpleSTL/include/sstl/: Array.h  Container.h  Deque.h  ForwardList.h  List.h  Map.h  MaxHeap.h  MinHeap.h  MultiMap.h  MultiSet.h  PriorityMap.h  PriorityMultiMap.h  PriorityMultiSet.h  PrioritySet.h  Queue.h  Set.h  Span.h  Stack.h  Vector.h
modules/SimpleSTL/test/: CMakeLists.txt  Test.cpp  TestAssociative.cpp  TestSelfAssociative.cpp  TestSequenced.cpp  TestShared.h
modules/SimpleUtils/: CMakeLists.txt
modules/SimpleUtils/include/sutil/: Comparison.h  InitializerList.h  Pair.h  Paths.h  PlatformDefinition.h  Threading.h
modules/SimpleUtils/test/: CMakeLists.txt  ThreadedTest.cpp
scripts/: packages.cmake  setup_vcpkg.cmake  setup_vcpkg.ps1  setup_vcpkg.sh
